Hecho el nav y logo, pero faltan las rutas una vez aclarado todo

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,1 +1,39 @@
-<p>nav works!</p>
+<nav class="navbar">
+  <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
+    <i class="pi pi-bars"></i>
+  </label>
+  <img src="./assets/img/logo.png" class="logo" alt="Logotipo de RoomSwapp" />
+  <input type="checkbox" id="chkToggle" />
+  <ul class="main-nav" id="js-menu">
+    <li>
+      <a href="#" class="nav-links">
+        <i class="pi pi-home"></i>
+        Inicio
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-links">
+        <i class="pi pi-send"></i>
+        Publicar Favor
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-links">
+        <i class="pi pi-search"></i>
+        Buscar Favor
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-links">
+        <i class="pi pi-envelope"></i>
+        Contacte con Nosotros
+      </a>
+    </li>
+    <li>
+      <a href="#" class="nav-links p-disabled">
+        <i class="pi pi-user"></i>
+        Login
+      </a>
+    </li>
+  </ul>
+</nav>
