arreglado colores correctamente

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,13 +1,13 @@
 
 <div class="grid footer">
-<div class="p-3 ">
+<div class="p-3">
   <img src="favicon.ico" alt="">
 </div>
 <!--Boton primero de dirección-->
   <div class="col">
     <div class="text-center border-round-sm font-bold">
     <!--Dirección-->
-    <p-button (click)="ubicacion()" styleClass="p-button-rounded p-button-secondary" label="&copy; FavorSwapp '23"></p-button>
+    <p-button (click)="ubicacion()" styleClass="p-button-rounded" label="&copy; FavorSwapp '23"></p-button>
     </div>
   </div>
   <!---->
@@ -15,13 +15,13 @@
     <div class="text-center border-round-sm font-bold ">
       <!--Redes Sociales-->
       <div class="align-content-center">
-        <p-button  styleClass="p-button-rounded p-button-secondary" (click)="facebook()" >
+        <p-button  styleClass="p-button-rounded" (click)="facebook()" >
           <i class="pi pi-facebook"></i>
         </p-button>
-        <p-button styleClass="p-button-rounded p-button-secondary" (click)="twitter()">
+        <p-button styleClass="p-button-rounded" (click)="twitter()">
           <i class="pi pi-twitter"></i>
         </p-button>
-        <p-button styleClass="p-button-rounded p-button-secondary" (click)="instagram()">
+        <p-button styleClass="p-button-rounded" (click)="instagram()">
           <i class="pi pi-instagram"></i>
         </p-button>
       </div>
@@ -33,11 +33,11 @@
       <div class="flex-1 flex align-items-center justify-content-center font-bold border-round">
         <!--Botones de atrezzo-->
         <p-button label="Privacidad" (click)="abrirPoliticaDePrivacidad()"
-                  styleClass="p-button-rounded p-button-secondary"></p-button>
+                  styleClass="p-button-rounded"></p-button>
         <p-button label="Términos" (click)="abrirDialogoTerminosYCondiciones()"
-                  styleClass="p-button-rounded p-button-secondary"></p-button>
+                  styleClass="p-button-rounded"></p-button>
         <p-button label="Cookies" (click)="abrirPoliticaDeCookies()"
-                  styleClass="p-button-rounded p-button-secondary"></p-button>
+                  styleClass="p-button-rounded"></p-button>
       </div>
     </div>
     </div>
