--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -3,11 +3,42 @@
   width: 100%;
   bottom: 0;
   height: 70px;
-  background: #252525;
-  color: #fff;
   display: flex;
   align-items: center;
   gap: 10px;
+  font-size: 18px;
+
+
+  background: #000046; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #1cb5e0,
+    #000046
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #1cb5e0,
+    #000046
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
+}
+.color-buttom {
+  background: #000046; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #1cb5e0,
+    #000046
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #1cb5e0,
+    #000046
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
 }
 
 
