Desarrollando el componente de filtros y insertar-favor.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 
-<app-filtros></app-filtros>
-<app-insertar-favor></app-insertar-favor>
+<!--<app-filtros></app-filtros>-->
+<!--<app-insertar-favor></app-insertar-favor>-->
 
 <app-inicio></app-inicio>
 
