--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -54,6 +54,8 @@
       <p>Mascota: {{mascota}}</p>
       <p>Climatización: {{climatizacion}}</p>
       <p>Movilidad Reducida: {{movilidadReducida}}</p>
+      <p>Provincia elegida: </p>
+
       <p>Provincia: {{provincias | json}}</p>
       <p>Favores: {{favores |json}}</p>
     </div>
