--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 .footer {
   position: fixed;
   width: 100%;
@@ -24,21 +30,15 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 10px;
 }
-.color-buttom {
-  background: #000046; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to left,
-    #1cb5e0,
-    #000046
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to left,
-    #1cb5e0,
-    #000046
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 10px;
+.logo {
+  width: 120px;
+  height: 70px;
+  padding: 2px;
+  display: inline-block;
+  font-size: 20px;
+  margin-top: 8px;
+  margin-left: 1px;
 }
 
 
