--- a/src/app/shared/components/inicio/inicio.component.html
+++ b/src/app/shared/components/inicio/inicio.component.html
@@ -1,5 +1,4 @@
 <div class="grid">
-  <img (click)="verFavores()" class="col-6 p-6" src="assets/img/ver.png" alt="Imagen para acceder a ver favores">
-  <img (click)="agregarFavor()" class="col-6 p-6" src="assets/img/agregar.png" alt="Imagen para acceder a agregar favor">
+  <img routerLink="filtros" (click)="verFavores()" class="col-6 p-6" src="assets/img/ver.png" alt="Imagen para acceder a ver favores">
+  <img routerLink="insertar-favor" (click)="agregarFavor()" class="col-6 p-6" src="assets/img/agregar.png" alt="Imagen para acceder a agregar favor">
 </div>
-
