--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -7,7 +7,7 @@
     <div class="col">
       <div class="text-center border-round-sm font-bold">
         <!--Dirección-->
-        <p-button (click)="ubicacion()" styleClass="p-button-rounded" label="&copy; RoomSwapp '23"></p-button>
+        <p-button (click)="ubicacion()" styleClass="p-button-text" label="&copy; RoomSwapp '23"></p-button>
       </div>
     </div>
     <!--Los Tres botones centrales -->
@@ -15,13 +15,13 @@
       <div class="text-center border-round-sm font-bold ">
         <!--Redes Sociales-->
         <div class="align-content-center">
-          <p-button styleClass="p-button-rounded" (click)="facebook()">
+          <p-button styleClass="p-button-text" (click)="facebook()">
             <i class="pi pi-facebook"></i>
           </p-button>
-          <p-button styleClass="p-button-rounded" (click)="twitter()">
+          <p-button styleClass="p-button-text" (click)="twitter()">
             <i class="pi pi-twitter"></i>
           </p-button>
-          <p-button styleClass="p-button-rounded" (click)="instagram()">
+          <p-button styleClass="p-button-text" (click)="instagram()">
             <i class="pi pi-instagram"></i>
           </p-button>
         </div>
