arreglado correctamente footer v3

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-  <div class="grid footer">
+  <div class="footer">
     <div >
       <img class="logo" src="assets/img/logo.png" alt="Imagen de icono del proyecto">
     </div>
