--- a/src/app/shared/components/inicio/inicio.component.css
+++ b/src/app/shared/components/inicio/inicio.component.css
@@ -1,1 +1,14 @@
+@media (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+  }
 
+  .flex > div {
+    margin-bottom: 1rem;
+  }
+
+  .w-12rem {
+    width: 100%;
+    max-width: 12rem;
+  }
+}
