--- a/src/app/shared/components/inicio/inicio.component.html
+++ b/src/app/shared/components/inicio/inicio.component.html
@@ -1,21 +1,18 @@
 <div class="flex align-items-center justify-content-center mt-8">
+
   <!--Imagen de ver-->
-  <div class="flex text-center p-4">
+  <div routerLink="filtros" class="flex text-center p-4">
     <div pRipple class="shadow-5 border-round surface-ground p-7">
-      <img (click)="verFavores()" class="w-12rem" src="assets/img/ver.png" alt="Imagen para acceder a ver favores">
+      <img class="w-12rem" src="assets/img/ver.png" alt="Imagen para acceder a ver favores">
       <p class="block text-3xl">Pulsa aquí para ver favor/es</p>
     </div>
   </div>
 
-
   <!--Imagen de agregar-->
-  <div  class="flex text-center p-4">
+  <div routerLink="insertar-favor" class="flex text-center p-4">
     <div pRipple class="shadow-5 border-round surface-ground p-7">
-      <img (click)="agregarFavor()" class="w-12rem" src="assets/img/agregar.png" alt="Imagen para acceder a agregar favor" >
+      <img class="w-12rem" src="assets/img/agregar.png" alt="Imagen para acceder a agregar favor" >
       <p class="block text-3xl">Pulsa aquí para publicar favor/es</p>
     </div>
   </div>
-
-
 </div>
-
