--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,39 +1,9 @@
-<nav class="navbar">
-  <label class="navbar-toggle" id="js-navbar-toggle" for="chkToggle">
-    <i class="pi pi-bars"></i>
-  </label>
-  <img src="./assets/img/logo.png" class="logo" alt="Logotipo de RoomSwapp" />
-  <input type="checkbox" id="chkToggle" />
-  <ul class="main-nav" id="js-menu">
-    <li>
-      <a href="#" class="nav-links">
-        <i class="pi pi-home"></i>
-        Inicio
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-links">
-        <i class="pi pi-send"></i>
-        Publicar Favor
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-links">
-        <i class="pi pi-search"></i>
-        Buscar Favor
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-links">
-        <i class="pi pi-envelope"></i>
-        Contacte con Nosotros
-      </a>
-    </li>
-    <li>
-      <a href="#" class="nav-links p-disabled">
-        <i class="pi pi-user"></i>
-        Login
-      </a>
-    </li>
-  </ul>
-</nav>
+<p-menubar class="nav" [model]="items">
+  <ng-template pTemplate="start" style="">
+    <img src="./assets/img/logo.png" class="logo md:pr-8" alt="Logotipo de RoomSwapp"  />
+  </ng-template>
+  <ng-template pTemplate="end">
+    <img src="./assets/img/usuario.png" class="logo" alt="Avatar de usuario"  />
+  </ng-template>
+</p-menubar>
+
