--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -1,7 +1,7 @@
 <p-card styleClass="shadow-8 bg-cyan-500" >
   <div>
     <h1>Crear un Favor</h1>
-    <form [formGroup]="formFavor" class="mt-4">
+    <form [formGroup]="formFavor" (ngSubmit)="validarFavor()" class="mt-4">
       <input type="hidden" formControlName="id"/>
       <div class="formgrid grid">
         <div class="field col-12 md:col-6">
@@ -11,40 +11,41 @@
 <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
 
+
         </div>
         <div class="field col-12 md:col-6">
           <div class="flex flex-column gap-2">
             <label>
-            <p-checkbox formControlName="fumar" value="true" inputId="fumar"></p-checkbox>
+            <p-checkbox  formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
             <span> Fumar</span>
             </label>
             <label>
-              <p-checkbox formControlName="internet" value="true" inputId="internet"></p-checkbox>
+              <p-checkbox formControlName="internet" [binary]="true" inputId="internet"></p-checkbox>
               <span> Internet</span>
             </label>
             <label>
-              <p-checkbox formControlName="mascota" value="true" inputId="mascota"></p-checkbox>
+              <p-checkbox formControlName="mascota" [binary]="true" inputId="mascota"></p-checkbox>
               <span> Mascota</span>
             </label>
             <label>
-              <p-checkbox formControlName="climatizacion" value="true" inputId="climatizacion"></p-checkbox>
+              <p-checkbox formControlName="climatizacion" [binary]="true" inputId="climatizacion"></p-checkbox>
               <span> Climatización</span>
             </label>
             <label>
-              <p-checkbox formControlName="adapMovRedu" value="true" inputId="adapMovRedu"></p-checkbox>
+              <p-checkbox formControlName="adaptacionMovilidadReducida" [binary]="true" inputId="adaptacionMovilidadReducida"></p-checkbox>
               <span> Adaptación movilidad reducida</span>
             </label>
           </div>
         </div>
         <div class="flex justify-content-end mb-2 p-3 gap-3">
           <p-button
-                  icon="pi pi-eye"
-                  label="Verificar"
+            icon="pi pi-eye"
+            label="Verificar"
           ></p-button>
           <p-button
-                  icon="pi pi-save"
-                  label="Guardar"
-                  type="submit"
+            icon="pi pi-save"
+            label="Guardar"
+            type="submit"
           ></p-button>
         </div>
       </div>
