--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -1,23 +1,50 @@
-<p-card styleClass="shadow-8 bg-cyan-500" >
-  <div>
-    <h1>Crear un Favor</h1>
+<p-card class="m-3">
+    <h2>Crear un Favor</h2>
     <form [formGroup]="formFavor" (ngSubmit)="validarFavor()" class="mt-4">
       <input type="hidden" formControlName="id"/>
       <div class="formgrid grid">
-        <div class="field col-12 md:col-6">
+        <div class="field col-12 md:col-4">
+          <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-user"></i> Datos personales</p>
           <span class="p-float-label m-2">
-            <input pInputText id="foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
-            <label htmlFor="foto">Foto</label>
-<!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+            <input pInputText id="nombre" type="text" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
+            <label htmlFor="nombre">Nombre</label>
+            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
-
-
+          <span class="p-float-label m-2">
+            <input pInputText id="primerAp" type="text" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
+            <label htmlFor="primerAp">Primer Apellido</label>
+            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+          </span>
+          <span class="p-float-label m-2">
+            <input pInputText id="segundoAp" type="text" class="w-full" aria-describedby="segundoAp-ayuda" formControlName="segundoAp">
+            <label htmlFor="segundoAp">Segundo Apellido</label>
+            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+          </span>
+          <span class="p-float-label m-2">
+            <input type="file"  formControlName="foto">
+          </span>
         </div>
-        <div class="field col-12 md:col-6">
+
+        <div class="field col-12 md:col-4">
+          <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-phone"></i> Datos de contactos</p>
+          <span class="p-float-label m-2">
+            <input pInputText id="telefono" type="tel" class="w-full" aria-describedby="telefono-ayuda" formControlName="telefono">
+            <label htmlFor="telefono">Teléfono</label>
+            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+          </span>
+          <span class="p-float-label m-2">
+            <input pInputText id="email" type="email" class="w-full" aria-describedby="email-ayuda" formControlName="email">
+            <label htmlFor="email">Email</label>
+            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+          </span>
+        </div>
+
+        <div class="field col-12 md:col-4">
+          <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
           <div class="flex flex-column gap-2">
             <label>
-            <p-checkbox  formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
-            <span> Fumar</span>
+              <p-checkbox formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
+              <span> Fumar</span>
             </label>
             <label>
               <p-checkbox formControlName="internet" [binary]="true" inputId="internet"></p-checkbox>
@@ -51,7 +78,6 @@
       </div>
     </form>
 
-  </div>
   <div style="background-color: darkseagreen">
     <p>{{formFavor.value | json}}</p>
   </div>
