--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -8,18 +8,18 @@
           <span class="p-float-label m-2">
             <input pInputText id="nombre" type="text" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
             <label htmlFor="nombre">Nombre</label>
-            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
           <span class="p-float-label m-2">
             <input pInputText id="primerAp" type="text" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
             <label htmlFor="primerAp">Primer Apellido</label>
-            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
           <span class="p-float-label m-2">
             <input pInputText id="segundoAp" type="text" class="w-full" aria-describedby="segundoAp-ayuda" formControlName="segundoAp">
             <label htmlFor="segundoAp">Segundo Apellido</label>
-            <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
+          <div class="m-2">
+            <p-dropdown placeholder="Elija una provincia" inputId="idProvincia"  optionValue="id" formControlName="idProvincia" [options]="provincias" optionLabel="nombre"></p-dropdown>
+          </div>
           <span class="p-float-label m-2">
             <input type="file"  formControlName="foto">
           </span>
@@ -42,6 +42,10 @@
         <div class="field col-12 md:col-4">
           <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
           <div class="flex flex-column gap-2">
+            <span class="p-float-label m-2">
+            <input pInputText id="descripcion" type="text" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
+            <label htmlFor="descripcion">Descripción</label>
+            </span>
             <label>
               <p-checkbox formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
               <span> Fumar</span>
@@ -59,15 +63,16 @@
               <span> Climatización</span>
             </label>
             <label>
-              <p-checkbox formControlName="adaptacionMovilidadReducida" [binary]="true" inputId="adaptacionMovilidadReducida"></p-checkbox>
+              <p-checkbox formControlName="adaptadoMovilidadReducida" [binary]="true" inputId="adaptadoMovilidadReducida"></p-checkbox>
               <span> Adaptación movilidad reducida</span>
             </label>
           </div>
         </div>
         <div class="flex justify-content-end mb-2 p-3 gap-3">
           <p-button
-            icon="pi pi-eye"
-            label="Verificar"
+            (click)="borrarFormulario()"
+            icon="pi pi-trash"
+            label="Borrar"
           ></p-button>
           <p-button
             icon="pi pi-save"
