arreglado footer v4 casi terminado añadida imagen blanca

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
 
   <div class="col-12 md:col-6 lg:col-3">
-    <img class="logo" src="assets/img/ver.png" alt="Imagen de icono del proyecto">
+    <img class="logo" src="assets/img/logo.png" alt="Imagen de icono del proyecto">
   </div>
 
 
