--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<p-menubar class="nav" [model]="items">
+<p-menubar class="nav-nuestro"  [model]="items">
   <ng-template pTemplate="start" style="">
     <img src="./assets/img/logo.png" class="logo md:pr-8" alt="Logotipo de RoomSwapp"  />
   </ng-template>
