--- a/src/app/shared/components/nav/nav.component.css
+++ b/src/app/shared/components/nav/nav.component.css
@@ -1,10 +1,17 @@
-.nav{
+.nav-nuestro {
+  position: fixed;
+  width: 100%;
+  background-color: var(--surface-a);
+  top: 0;
+  left: 0;
+  right: 0;
 
 }
 
+
 .logo, .avatar{
 
-  height: 60px;
+  height: 70px;
 }
 
 
