--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -1,59 +1,58 @@
-<div >
+<div>
   <div class="mt-3">
-    <div class="flex justify-content-between flex-wrap">
-      <div>
-        <p-dropdown placeholder="Elija una provincia" inputId="provincias" appendTo="body" optionValue="id" [(ngModel)]="provinciaElegida" [options]="provincias" optionLabel="nombre"></p-dropdown>
-      </div>
-      <div>
-        <p-selectButton [options]="nombreDeFiltros" [(ngModel)]="todosLosFiltros" [multiple]="true" optionLabel="nombre" optionValue="nombre"></p-selectButton>
+    <div class="flex justify-content-center flex-wrap">
+      <p-dropdown (onChange)="cambiarProvincia()"  placeholder="Elija una provincia" inputId="provincias" appendTo="body" optionValue="id"
+                  [(ngModel)]="idProvinciaElegida" [options]="provincias" optionLabel="nombre"></p-dropdown>
+
+      <p-selectButton  (onOptionClick)="aplicarFiltros()" [options]="filtros" [(ngModel)]="filtrosSeleccionados" [multiple]="true" optionLabel="nombre"></p-selectButton>
+    </div>
+
+    <!-- Pruebas para el desarrollo-->
+    <div>
+      <div *ngIf="pruebasDesarrollo" style="background-color: darkseagreen">
+        <p>Provincia elegidaID: {{idProvinciaElegida}}</p>
+        <!--        <p>Provincias: {{provincias | json}}</p>-->
+        <!--        <p>Favores: {{favoresOriginal |json}}</p>-->
+        <p>FavorDialogo: {{favorDialogo |json}}</p>
+        <p>TodosLosFiltros: {{filtrosSeleccionados | json}}</p>
       </div>
     </div>
 
-<!--  Tarjetas de cada favor-->
-
-  <ng-container>
-    <div *ngIf="favores.length == 0">
-      <div class="p-message p-message-error p-3">No hay ningún resultado</div>
-    </div>
-    <div *ngIf="favores.length > 0" class="flex justify-content-center flex-wrap">
-      <p-card *ngFor="let favor of favores" [header]="favor.descripcion" [style]="{ width: '300px' }" class="m-3">
-        <ng-template pTemplate="header">
-          <img *ngIf="favor.foto != null && favor.foto != ''" class="h-13rem" alt="Imagen de {{favor.descripcion}}" [src]="favor.foto"/>
-          <img *ngIf="favor.foto == null || favor.foto == ''" class="h-13rem px-6" alt="Imagen de {{favor.descripcion}}" src="assets/img/imagenDefecto.png"/>
-        </ng-template>
-        <ng-template pTemplate="content">
-          <div [style]="{ height: '40px' }">
-            <p-tag *ngIf="favor.fumar" value="Fumar" [rounded]="true"></p-tag>
-            <p-tag *ngIf="favor.internet" value="Internet" [rounded]="true"></p-tag>
-            <p-tag *ngIf="favor.mascota" value="Mascota" [rounded]="true"></p-tag>
-            <p-tag *ngIf="favor.climatizacion" value="Climatización" [rounded]="true"></p-tag>
-            <p-tag *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado" [rounded]="true"></p-tag>
-          </div>
-        </ng-template>
-        <ng-template pTemplate="footer">
-          <p-button class="w-1" (click)="abrirDialogoContacto(favor)" label="Contactar"></p-button>
-          <p-dialog header="Datos de contacto" [(visible)]="dialogoContactar" [style]="{width: '50vw'}">
-            <div *ngIf="favorDialogo != null">
-              <p>Nombre: {{favorDialogo.usuario.nombre}}</p>
-              <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
-              <p>Email: {{favorDialogo.usuario.email}}</p>
-              <p>Telefono: {{favorDialogo.usuario.telefono}}</p>
+    <!--  Tarjetas de cada favor-->
+    <ng-container>
+      <div *ngIf="favoresOriginal.length == 0">
+        <div class="p-message p-message-error p-3">No hay ningún resultado</div>
+      </div>
+      <div *ngIf="favoresOriginal.length > 0" class="flex justify-content-center flex-wrap">
+        <p-card *ngFor="let favor of favoresFiltrados" [header]="favor.descripcion" [style]="{ width: '300px' }" class="m-3">
+          <ng-template pTemplate="header">
+            <img *ngIf="favor.foto != null && favor.foto != ''" class="h-13rem" alt="Imagen de {{favor.descripcion}}"
+                 [src]="favor.foto"/>
+            <img *ngIf="favor.foto == null || favor.foto == ''" class="h-13rem px-6"
+                 alt="Imagen de {{favor.descripcion}}" src="assets/img/imagenDefecto.png"/>
+          </ng-template>
+          <ng-template pTemplate="content">
+            <div [style]="{ height: '40px' }">
+              <p-tag *ngIf="favor.fumar" value="Fumar" [rounded]="true"></p-tag>
+              <p-tag *ngIf="favor.internet" value="Internet" [rounded]="true"></p-tag>
+              <p-tag *ngIf="favor.mascota" value="Mascota" [rounded]="true"></p-tag>
+              <p-tag *ngIf="favor.climatizacion" value="Climatización" [rounded]="true"></p-tag>
+              <p-tag *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado" [rounded]="true"></p-tag>
             </div>
-          </p-dialog>
-        </ng-template>
-      </p-card>
-    </div>
-  </ng-container>
-
-  <div>
-    <div *ngIf="pruebasDesarrollo" style="background-color: darkseagreen">
-      <p>Provincia elegidaID: {{provinciaElegida}}</p>
-
-      <p>Provincias: {{provincias[1] | json}}</p>
-      <p>Favores: {{favores |json}}</p>
-      <p>FavorDialogo: {{favorDialogo |json}}</p>
-
-    </div>
-
+          </ng-template>
+          <ng-template pTemplate="footer">
+            <p-button class="w-1" (click)="abrirDialogoContacto(favor)" label="Contactar"></p-button>
+            <p-dialog header="Datos de contacto" [(visible)]="dialogoContactar" [style]="{width: '50vw'}">
+              <div *ngIf="favorDialogo != null">
+                <p>Nombre: {{favorDialogo.usuario.nombre}}</p>
+                <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
+                <p>Email: {{favorDialogo.usuario.email}}</p>
+                <p>Telefono: {{favorDialogo.usuario.telefono}}</p>
+              </div>
+            </p-dialog>
+          </ng-template>
+        </p-card>
+      </div>
+    </ng-container>
   </div>
 </div>
