--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -33,19 +33,20 @@
           </ng-template>
           <ng-template pTemplate="content">
             <div [style]="{ height: '40px' }">
-              <p-tag *ngIf="favor.fumar" value="Fumar" [rounded]="true"></p-tag>
-              <p-tag *ngIf="favor.internet" value="Internet" [rounded]="true"></p-tag>
-              <p-tag *ngIf="favor.mascota" value="Mascota" [rounded]="true"></p-tag>
-              <p-tag *ngIf="favor.climatizacion" value="Climatización" [rounded]="true"></p-tag>
-              <p-tag *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.fumar" value="Fumar" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.internet" value="Internet" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.mascota" value="Mascota" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.climatizacion" value="Climatización" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado" [rounded]="true"></p-tag>
             </div>
           </ng-template>
           <ng-template pTemplate="footer">
             <p-button class="w-1" (click)="abrirDialogoContacto(favor)" label="Contactar"></p-button>
-            <p-dialog header="Datos de contacto" [(visible)]="dialogoContactar" [style]="{width: '50vw'}">
+            <p-dialog [header]="favorDialogo?.descripcion" [maximizable]="true" [(visible)]="dialogoContactar" [style]="{width: '50vw'}" >
               <div *ngIf="favorDialogo != null">
                 <p>Nombre: {{favorDialogo.usuario.nombre}}</p>
                 <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
+                <p>Dirección: {{favorDialogo.direccion}}</p>
                 <p>Email: {{favorDialogo.usuario.email}}</p>
                 <p>Telefono: {{favorDialogo.usuario.telefono}}</p>
               </div>
