--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -3,7 +3,10 @@
     <img src="./assets/img/logo.png" class="logo md:pr-8" alt="Logotipo de RoomSwapp"  />
   </ng-template>
   <ng-template pTemplate="end">
+    <p>{{this.usuarioActivo.usuarioActivo?.email}}</p>
+<!--
     <img src="./assets/img/usuario.png" class="logo" alt="Avatar de usuario"  />
+-->
   </ng-template>
 </p-menubar>
 
