Modificacion insertar-favor.component.html

--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -6,8 +6,8 @@
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-user"></i> Datos personales</p>
         <span class="p-float-label m-2">
-            <input pInputText id="nombre" type="text" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
-            <label htmlFor="nombre">Nombre</label>
+            <input pInputText id="nombre" type="text" value="prueba" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
+            <!--<label htmlFor="nombre">Nombre</label>-->
           </span>
         <span class="p-float-label m-2">
             <input pInputText id="primerAp" type="text" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
