Iconos de filtros y nav de FONTAWESOME

--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -48,7 +48,7 @@
                 <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
                 <p>Dirección: {{favorDialogo.direccion}}</p>
                 <p>Email: {{favorDialogo.usuario.email}}</p>
-                <p>Telefono: {{favorDialogo.usuario.telefono}}</p>
+                <p>Teléfono: {{favorDialogo.usuario.telefono}}</p>
               </div>
             </p-dialog>
           </ng-template>
